16 переделка списка в памяти в domain trie сильно сэкономит память для поддержки записей доменов, кажется скорость поиска не упадёт.